--- a/stylessheet.css
+++ b/stylessheet.css
@@ -4,7 +4,9 @@
     --color-blue: #37cee2;
     --color-blue_alpha: #85c7f2;
     --color-blue_beta: #73d2de;
-    
+    --img--color_1: #ffd604;
+    --img--color_2: #ff3cc7;
+    --img--color_3: #006494;
 }
 
 *,
@@ -20,6 +22,35 @@ html{
 }
 
 body {
-    background: 5;
+    background: var(--color-primary);
+    font-family: roboto, Arial, Helvetica, sans-serif;
+}
+
+.form_container {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.form--items {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+}
+
+.image_holder {
+    height: 12rem;
+    width: 12rem;
+    border-radius: 50%;
+    background: linear-gradient(45deg, var(--img--color_1), 
+                                        var( --img--color_2), 
+                                    var(--color-blue_alpha), 
+                                        var(--img--color_3),
+                                        var(--img--color_2));
+    margin: 3rem;
 }
 
