--- a/stylessheet.css
+++ b/stylessheet.css
@@ -1,12 +1,15 @@
 :root {
     --color-primary: #101010;
     --color-secondary: #2b2b2b;
+    --color-secondary_beta: #2f2f2f;
     --color-blue: #37cee2;
     --color-blue_alpha: #85c7f2;
     --color-blue_beta: #73d2de;
     --img--color_1: #ffd604;
     --img--color_2: #ff3cc7;
     --img--color_3: #006494;
+    --txt--color_alpha: #fafafa;
+    --txt--color_beta: #f2f2f2;
 }
 
 *,
@@ -40,17 +43,101 @@ body {
     justify-content: center;
     align-items: center;
     height: auto;
+    margin-top: -15rem;
 }
 
 .image_holder {
     height: 12rem;
     width: 12rem;
     border-radius: 50%;
-    background: linear-gradient(45deg, var(--img--color_1), 
-                                        var( --img--color_2), 
-                                    var(--color-blue_alpha), 
-                                        var(--img--color_3),
+    background: linear-gradient(115deg, var(--img--color_1) 20%, 
+                                        var( --img--color_2) 40%, 
+                                    var(--color-blue_alpha) 60%, 
+                                        var(--img--color_3) 80%,
                                         var(--img--color_2));
     margin: 3rem;
 }
 
+.header {
+    color: var(--txt--color_alpha);
+    text-transform: capitalize;
+    text-align: center;
+    font-weight: 400;
+    font-size: 3rem;
+    margin-bottom: 3rem;
+   
+}
+
+.name {
+    display: block;
+    width: 35rem;
+    padding: 1rem;
+    font-size: 2.5rem;
+    margin-bottom: 3rem;
+    border-radius: 1rem;
+    color: var(--txt--color_beta);
+    background: var(--color-secondary);
+    border: .02rem solid var(--color-blue);
+    text-align: center;
+    
+}
+
+ .input .name:focus {
+    outline: none;
+}
+
+.btn {
+    
+    width: 35rem;
+    padding: 1rem;
+    font-size: 2.5rem;
+    border-radius: 1rem;
+    margin: auto;
+    display: block;
+    text-align: center;
+    text-transform: capitalize;
+    color: var(--txt--color_beta);
+    background: var(--color-blue);
+    border: .02rem solid var(--color-blue);
+    
+
+}
+
+.nav_bars {
+    width: 35rem;
+    margin-top: 3rem;
+    display: flex;
+    justify-content: center;
+}
+
+.nav_blank {
+    width: 5rem;
+    border-radius: 2rem;
+    margin: auto;
+    background: var(--color-secondary_beta);
+}
+
+.nav_blank:first-child {
+    background-color: #777;
+}
+
+footer .discription {
+    background-color: var(--color-secondary);
+    height: 5rem;
+    /* margin-top: -10rem; */
+}
+
+.footer_para {
+    padding: 2rem;
+    font-size: 1rem;
+    letter-spacing: .1rem;
+    margin: auto;
+    text-align: center;
+    color: var(--txt--color_beta);
+}
+
+.footer_link {
+    margin: 0 auto;
+    text-decoration: none;
+    color: var(--color-blue_beta);
+}
